--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,9 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            url 'https://oss.jfrog.org/artifactory/plugins-release'
-            credentials {
-                username = "${artifactory_user}"
-                password = "${artifactory_password}"
-            }
-        }
-
     }
     dependencies {
-        //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.0'
     }
 }
 
@@ -22,7 +13,6 @@ plugins {
     id "maven"
     id "maven-publish"
     id "signing"
-    id "com.jfrog.bintray" version "1.7.3"
 }
 
 group 'com.github.redhatqe.polarizer'
@@ -33,17 +23,12 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 sourceCompatibility = 1.8
 
-String vertxVersion = "3.5.0"
 String mainVerticleName = 'com.github.redhatqe.polarizer.MainVerticle'
 String watchForChange = 'src/**/*'
 String doOnChange = '/.gradlew classes'
-String projectURL = 'https://github.com/Polarizer-Projects/polarizer-vertx.git'
-String devURL = 'git@github.com:Polarizer-Projects/polarizer-vertx.git'
+String projectURL = 'https://github.com/RareBreed/polarizer-umb.git'
+String devURL = 'git@github.com:RareBreed/polarizer-umb.git'
 String propFile = System.getProperty("user.home") + "/.polarizer/polarizer-project.properties"
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -53,12 +38,9 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
     api group: 'org.apache.activemq', name: 'activemq-all', version: '5.15.2'
     api group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
-    api "io.vertx:vertx-web-client:${vertxVersion}"
-    api "io.vertx:vertx-core:${vertxVersion}"
-    api "io.vertx:vertx-web:${vertxVersion}"
-    api "io.vertx:vertx-amqp-bridge:${vertxVersion}"
-    api "io.vertx:vertx-rx-java2:${vertxVersion}"
+
     implementation 'com.github.redhatqe.polarizer:reporter:0.2.2'
+    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.13'
 }
 
 class Creds {
@@ -86,20 +68,21 @@ def getCreds(String polarizePropertyFile, String field1, String field2) {
 }
 
 Creds credsOssrh = getCreds(propFile)
-Creds credsBintray = getCreds(propFile, "bintrayUser", "bintrayPassword")
-
 
 repositories {
-    mavenCentral()
+    jcenter ()
     mavenLocal()
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        credentials {
+            username credsOssrh.user
+            password credsOssrh.pw
+        }
+    }
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.4'
-}
-
-allprojects {
-    apply plugin: "com.jfrog.artifactory"
 }
 
 
@@ -171,7 +154,7 @@ publishing {
             pom.withXml {
                 def root = asNode()
                 root.appendNode('description', 'JAXB classes for xunit and testcases, TestNG reporter')
-                root.appendNode('name', 'reporter')
+                root.appendNode('name', 'polarizer-umb')
                 root.appendNode('url', "${projectURL}")
                 root.children().last() + pomConfig
             }
@@ -179,70 +162,47 @@ publishing {
     }
 }
 
-bintray {
-    user = credsBintray.user
-    key = credsBintray.pw
-    override = true
-    publish = true
-    pkg {
-        repo = project.name
-        name = project.name
-        licenses = ['Apache-2.0']
-        vcsUrl = projectURL
-        version {
-            name = "${version}"
-            desc = 'Data definitions for xunit and testcase for polarize.  TestNG Reporter'
-            released  = new Date()
-            gpg {
-                sign = true //Determines whether to GPG sign the files. The default is false
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            Creds creds = getCreds(propFile)
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: creds.user, password: creds.pw)
             }
-            mavenCentralSync {
-                sync = true //[Default: true] Determines whether to sync the version to Maven Central.
-                user =  "${credsOssrh.user}" //OSS user token: mandatory
-                password = "${credsOssrh.pw}" //OSS user password: mandatory
-                close = '1' //Optional property. 1 = the staging repository is closed and artifacts are released .
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: creds.user, password: creds.pw)
             }
-        }
-    }
-    publications = ['mavenJava']
-}
 
-artifactory {
-    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
-    // This information is used to upload to artifactory for snapshots
-    publish {
-        repository {
-            repoKey = version.endsWith("SNAPSHOT") ? 'oss-snapshot-local' : 'oss-release-local'
-            username = "${artifactory_user}"
-            password = "${artifactory_password}"
-            maven = true
-        }
+            pom.project {
+                name project.name
+                packaging 'jar'
+                description 'Library to help with configuration'
+                url projectURL
 
-        defaults {
-            //List of Gradle Configurations (names or objects) from which to collect the list of artifacts to be deployed to Artifactory.
-            publications('mavenJava')
+                scm {
+                    connection "scm:git:${projectURL}.git"
+                    developerConnection "scm:git:${devURL}"
+                    url projectURL
+                }
 
-            //properties = ['qa.level': 'basic', 'q.os': 'win32, deb, osx']  //Optional map of properties to attach to all published artifacts
-            /*
-            The properties closure in the "defaults" task uses the following syntax:
-            properties {
-                publicationName 'group:module:version:classifier@type', key1:'value1', key2:'value2', ...
-            }*/
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
 
-            publishBuildInfo = true   //Publish build-info to Artifactory (true by default)
-            publishArtifacts = true   //Publish artifacts to Artifactory (true by default)
-            publishPom = true   //Publish generated POM files to Artifactory (true by default).
-            publishIvy = true   //Publish generated Ivy descriptor files to Artifactory (true by default).
-        }
-    }
-
-    resolve {
-        repository {
-            repoKey = version.endsWith("SNAPSHOT") ? "libs-snapshot" : "libs-release"
-            username = "${artifactory_user}"
-            password = "${artifactory_password}"
-            maven = true
+                developers {
+                    developer {
+                        id 'stoner'
+                        name 'Sean Toner'
+                        email 'stoner@redhat.com'
+                    }
+                }
+            }
         }
     }
 }
-
